feat: implement expert settings for field weights configuration and add related UI components

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -263,5 +263,31 @@
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix",
   "yes": "Ja",
-  "no": "Nein"
+  "no": "Nein",
+  "expert-settings": "Experteneinstellungen",
+  "expert-settings-description": "Erweiterte Verifizierungseinstellungen und Feldgewichtungen für Metadaten-Abgleich konfigurieren",
+  "field-weights": "Feldgewichtungen",
+  "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100% ergeben.",
+  "total-weight": "Gesamtgewichtung",
+  "weights-should-sum-to-100": "Alle Gewichtungen sollten zusammen 100% ergeben",
+  "core-fields": "Kernfelder",
+  "identifier-fields": "Identifikationsfelder",
+  "source-fields": "Quellenfelder",
+  "save-settings": "Einstellungen speichern",
+  "reset-to-defaults": "Auf Standard zurücksetzen",
+  "loading-settings": "Lade Einstellungen...",
+  "field-description-title": "Wie wichtig ist die Titel-Übereinstimmung für die Referenz-Verifizierung",
+  "field-description-authors": "Wie wichtig ist die Autoren-Übereinstimmung für die Referenz-Verifizierung",
+  "field-description-year": "Wie wichtig ist die Übereinstimmung des Veröffentlichungsjahrs für die Referenz-Verifizierung",
+  "field-description-doi": "Gewichtung für exakte DOI-Übereinstimmungen (höchste Konfidenz wenn verfügbar)",
+  "field-description-arxivId": "Gewichtung für arXiv ID-Übereinstimmungen (wichtig für Preprints)",
+  "field-description-pmid": "Gewichtung für PubMed ID-Übereinstimmungen (wichtig für medizinische Literatur)",
+  "field-description-pmcid": "Gewichtung für PMC ID-Übereinstimmungen (wichtig für medizinische Literatur)",
+  "field-description-isbn": "Gewichtung für ISBN-Übereinstimmungen (wichtig für Bücher)",
+  "field-description-issn": "Gewichtung für ISSN-Übereinstimmungen (wichtig für Zeitschriften)",
+  "field-description-containerTitle": "Gewichtung für Zeitschriften-/Container-Titel-Übereinstimmungen",
+  "field-description-volume": "Gewichtung für Band-Nummer-Übereinstimmungen",
+  "field-description-issue": "Gewichtung für Ausgabe-Nummer-Übereinstimmungen",
+  "field-description-pages": "Gewichtung für Seitenzahl-Übereinstimmungen",
+  "container-title": "Container-Titel"
 }
