--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -263,5 +263,31 @@
   "year-match": "Year Match",
   "year-suffix": "Year Suffix",
   "yes": "Yes",
-  "no": "No"
+  "no": "No",
+  "expert-settings": "Expert Settings",
+  "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
+  "field-weights": "Field Weights",
+  "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
+  "total-weight": "Total Weight",
+  "weights-should-sum-to-100": "All weights should sum to 100%",
+  "core-fields": "Core Fields",
+  "identifier-fields": "Identifier Fields",
+  "source-fields": "Source Fields",
+  "save-settings": "Save Settings",
+  "reset-to-defaults": "Reset to Defaults",
+  "loading-settings": "Loading settings...",
+  "field-description-title": "How important is title matching for reference verification",
+  "field-description-authors": "How important is author matching for reference verification",
+  "field-description-year": "How important is publication year matching for reference verification",
+  "field-description-doi": "Weight for exact DOI matches (highest confidence when available)",
+  "field-description-arxivId": "Weight for arXiv ID matches (important for preprints)",
+  "field-description-pmid": "Weight for PubMed ID matches (important for medical literature)",
+  "field-description-pmcid": "Weight for PMC ID matches (important for medical literature)",
+  "field-description-isbn": "Weight for ISBN matches (important for books)",
+  "field-description-issn": "Weight for ISSN matches (important for journals)",
+  "field-description-containerTitle": "Weight for journal/container title matching",
+  "field-description-volume": "Weight for volume number matching",
+  "field-description-issue": "Weight for issue number matching",
+  "field-description-pages": "Weight for page range matching",
+  "container-title": "Container Title"
 }
