feat: Enhance expert settings with advanced field weights and descriptions

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1,12 +1,14 @@
 {
   "about": "Über uns",
   "about-description": "Erfahre mehr über die Extension",
+  "advanced-fields": "Erweiterte Felder",
+  "advanced-fields-description": "Diese Felder sind optional und können zusätzliche Matching-Präzision für spezialisierte Inhaltstypen bieten. Aktivieren Sie nur die für Ihren Anwendungsfall relevanten Felder.",
   "advisor": "Betreuer",
   "ai": "KI",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-extraction": "KI-Extraktion",
   "ai-model": "KI-Modell",
-  "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll",
+  "ai-model-description": "Wählen Sie das KI-Modell für die Extraktion verwendet werden soll",
   "ai-used": "DOIs mit KI extrahiert",
   "all-found-sources": "Alle gefundenen Quellen",
   "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
@@ -14,6 +16,7 @@
   "analyzing-references-description": "Es wird nach passenden Quellen gesucht und die Übereinstimmung mit deinen Referenzen überprüft. Je nach Anzahl der Referenzen kann dies einige Zeit dauern.",
   "analyzing-text-content": "Analysiere Textinhalt…",
   "analyzing-text-content-description": "Der eingegebene Text wird analysiert. Wir suchen und erkennen automatisch bibliografische Referenzen. Je nach Textlänge kann dies einige Zeit dauern.",
+  "anthology": "Anthologie",
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
@@ -46,6 +49,7 @@
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
   "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
+  "container-title": "Container-Titel",
   "containerTitle": "Erscheinungsort",
   "containerTitle-match": "Erscheinungsort-Übereinstimmung",
   "contributors": "Mitwirkende",
@@ -55,11 +59,13 @@
   "copy-identifier": "Kennung kopieren",
   "copy-identifier-tooltip": "Die primäre Kennung (DOI, PMCID, etc.) in die Zwischenablage kopieren",
   "copy-reference": "Referenz kopieren",
+  "core-fields": "Kernfelder",
   "create-one-here": "hier erstellen",
   "dark": "Dunkel",
   "date-range": "Datumsbereich",
   "day": "Tag",
   "degree": "Abschluss",
+  "delete": "Löschen",
   "department": "Abteilung",
   "description": "Beschreibung",
   "description-match": "Beschreibung-Übereinstimmung",
@@ -83,10 +89,39 @@
   "error": "Fehler",
   "error-reference": "Referenz konnte aufgrund eines technischen Fehlers nicht überprüft werden",
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
+  "example-explanation": "In diesem Beispiel konzentriert sich die Verifizierung zu 50% auf Titel-Ähnlichkeit, zu 30% auf DOI-Übereinstimmung und zu 20% auf Autoren-Ähnlichkeit. Alle anderen Felder (Jahr, Zeitschrift, Seiten, etc.) werden ignoriert.",
+  "example-scenario": "Sie möchten sich nur auf Titel- und DOI-Abgleich konzentrieren und alle anderen Felder ignorieren",
+  "expert-settings": "Experteneinstellungen",
+  "expert-settings-description": "Erweiterte Verifizierungseinstellungen und Feldgewichtungen für Metadaten-Abgleich konfigurieren",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "extracting-references": "Extrahiere Referenzen...",
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
+  "field": "Feld",
+  "field-description-articleNumber": "Gewichtung für Artikelnummer-Übereinstimmung (elektronische Zeitschriften)",
+  "field-description-arxivId": "Gewichtung für arXiv ID-Übereinstimmungen (wichtig für Preprints)",
+  "field-description-authors": "Wie wichtig ist die Autoren-Übereinstimmung für die Referenz-Verifizierung",
+  "field-description-conference": "Gewichtung für Konferenz-Name-Übereinstimmung",
+  "field-description-containerTitle": "Gewichtung für Zeitschriften-/Container-Titel-Übereinstimmungen",
+  "field-description-doi": "Gewichtung für exakte DOI-Übereinstimmungen (höchste Konfidenz wenn verfügbar)",
+  "field-description-edition": "Gewichtung für Auflagen-Information-Übereinstimmung",
+  "field-description-institution": "Gewichtung für Institution-Übereinstimmung (für Abschlussarbeiten, Berichte)",
+  "field-description-isbn": "Gewichtung für ISBN-Übereinstimmungen (wichtig für Bücher)",
+  "field-description-issn": "Gewichtung für ISSN-Übereinstimmungen (wichtig für Zeitschriften)",
+  "field-description-issue": "Gewichtung für Ausgabe-Nummer-Übereinstimmungen",
+  "field-description-pages": "Gewichtung für Seitenzahl-Übereinstimmungen",
+  "field-description-pmcid": "Gewichtung für PMC ID-Übereinstimmungen (wichtig für medizinische Literatur)",
+  "field-description-pmid": "Gewichtung für PubMed ID-Übereinstimmungen (wichtig für medizinische Literatur)",
+  "field-description-publisher": "Gewichtung für Verlag-Name-Übereinstimmung",
+  "field-description-sourceType": "Gewichtung für Quellentyp-Übereinstimmung (Artikel, Buch, These, etc.)",
+  "field-description-subtitle": "Gewichtung für Untertitel-Übereinstimmung (wichtig für deutsche Zitationsstile)",
+  "field-description-title": "Wie wichtig ist die Titel-Übereinstimmung für die Referenz-Verifizierung",
+  "field-description-url": "Gewichtung für URL-Übereinstimmung",
+  "field-description-volume": "Gewichtung für Band-Nummer-Übereinstimmungen",
+  "field-description-year": "Wie wichtig ist die Übereinstimmung des Veröffentlichungsjahrs für die Referenz-Verifizierung",
+  "field-weights": "Feldgewichtungen",
+  "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100% ergeben.",
+  "field-weights-explanation": "Feldgewichtungen bestimmen, wie wichtig jedes Metadatenfeld beim Vergleich von Referenzen ist. Höhere Gewichtungen bedeuten, dass das Feld mehr Einfluss auf die Gesamtbewertung hat. Die Summe muss 100% ergeben.",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
   "found": "Gefunden",
@@ -99,9 +134,13 @@
   "hide-additional-fields": "Zusätzliche Felder ausblenden",
   "hide-date-details": "Datumsdetails ausblenden",
   "hide-details": "Details ausblenden",
+  "high-impact": "Großer Einfluss auf Bewertung",
+  "how-field-weights-work": "Wie Feldgewichtungen funktionieren",
   "hr": "h",
+  "identifier-fields": "Identifikationsfelder",
   "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
+  "impact": "Auswirkung",
   "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
   "in-press": "Im Druck",
   "in-press-indicator": "im Druck",
@@ -111,8 +150,8 @@
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "invalid-url": "Bitte geben Sie eine gültige URL ein",
-  "isbn": "ISBN",
   "is-standalone": "Eigenständiges Werk",
+  "isbn": "ISBN",
   "issn": "ISSN",
   "issue": "Ausgabe",
   "issue-match": "Ausgabe-Übereinstimmung",
@@ -124,7 +163,9 @@
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "learn-more": "Mehr erfahren",
   "light": "Hell",
+  "loading-settings": "Lade Einstellungen...",
   "location": "Ort",
+  "low-impact": "Geringer Einfluss auf Bewertung",
   "match-analysis": "Übereinstimmungsanalyse",
   "match-details": "Übereinstimmungsdetails",
   "match-score": "Übereinstimmungswert",
@@ -133,13 +174,18 @@
   "match-status-no_match": "Keine Übereinstimmung",
   "match-status-partial": "Teilweise",
   "medium": "Medium",
+  "medium-impact": "Mittlerer Einfluss auf Bewertung",
   "metadata": "Metadaten",
   "min": "min",
   "month": "Monat",
+  "more-advanced-fields": "Weitere spezialisierte Felder",
+  "more-advanced-fields-description": "Zusätzliche Felder für hochspezialisierte Anwendungsfälle (wissenschaftliche Arbeiten, übersetzte Werke, etc.)",
+  "no": "Nein",
   "no-additional-error-info": "Keine zusätzlichen Fehlerinformationen verfügbar",
   "no-data-available": "Keine Daten verfügbar",
   "no-date": "Kein Datum",
   "no-date-indicator": "o.J.",
+  "no-impact": "Feld wird ignoriert",
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "no-matching-source-found": "Keine passende Quelle gefunden oder Überprüfung fehlgeschlagen",
   "no-references-detected": "Keine Referenzen erkannt",
@@ -159,6 +205,8 @@
   "original-language": "Originalsprache",
   "original-text": "Originaltext",
   "original-title": "Originaltitel",
+  "other": "Andere",
+  "other-fields": "Andere Felder",
   "overall-match": "Gesamtübereinstimmung",
   "page-type": "Seitentyp",
   "pages": "Seiten",
@@ -170,8 +218,10 @@
   "pmcid": "PMCID",
   "pmid": "PMID",
   "popup": "Popup",
+  "practical-example": "Praktisches Beispiel",
   "publication-date": "Publikationsdatum",
   "publication-place": "Publikationsort",
+  "publication-year": "Publikationsjahr",
   "published-date": "Veröffentlichungsdatum",
   "publisher": "Verlag",
   "re-verify": "Erneut überprüfen",
@@ -188,10 +238,13 @@
   "requests-per-day-description": "Dies ist das Limit der KI-Anfragen pro Tag",
   "requests-per-minute": "Anfragen pro Minute",
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
+  "reset-to-defaults": "Auf Standard zurücksetzen",
   "resets-in": "Wird zurückgesetzt in ca.",
   "restart-verification": "Überprüfung neu starten",
   "retrieval-date": "Abrufdatum",
-  "retry-verification": "Verifikation wiederholen",
+  "retry": "Wiederholen",
+  "save-settings": "Einstellungen speichern",
+  "scenario": "Szenario",
   "search": "Suche",
   "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
@@ -210,6 +263,7 @@
   "site-name": "Website-Name",
   "source": "Quelle",
   "source-code": "Quellcode",
+  "source-fields": "Quellenfelder",
   "source-metadata": "Quellen-Metadaten",
   "source-type": "Quellentyp",
   "source-url": "Quellen-URL",
@@ -225,6 +279,7 @@
   "title-match": "Titel-Übereinstimmung",
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
+  "total-weight": "Gesamtgewichtung",
   "unregistered": "Nicht registriert",
   "unverified": "Nicht verifiziert",
   "unverified-reference": "Referenz konnte keiner Quelle zugeordnet werden. Bitte überprüfen Sie die Referenz manuell.",
@@ -259,49 +314,10 @@
   "website": "Webseite",
   "website-metadata": "Website-Metadaten",
   "website-url": "Website-URL",
+  "weight": "Gewichtung",
+  "weights-should-sum-to-100": "Alle Gewichtungen sollten zusammen 100% ergeben",
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix",
-  "yes": "Ja",
-  "no": "Nein",
-  "expert-settings": "Experteneinstellungen",
-  "expert-settings-description": "Erweiterte Verifizierungseinstellungen und Feldgewichtungen für Metadaten-Abgleich konfigurieren",
-  "field-weights": "Feldgewichtungen",
-  "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100% ergeben.",
-  "total-weight": "Gesamtgewichtung",
-  "weights-should-sum-to-100": "Alle Gewichtungen sollten zusammen 100% ergeben",
-  "core-fields": "Kernfelder",
-  "identifier-fields": "Identifikationsfelder",
-  "source-fields": "Quellenfelder",
-  "save-settings": "Einstellungen speichern",
-  "reset-to-defaults": "Auf Standard zurücksetzen",
-  "loading-settings": "Lade Einstellungen...",
-  "field-description-title": "Wie wichtig ist die Titel-Übereinstimmung für die Referenz-Verifizierung",
-  "field-description-authors": "Wie wichtig ist die Autoren-Übereinstimmung für die Referenz-Verifizierung",
-  "field-description-year": "Wie wichtig ist die Übereinstimmung des Veröffentlichungsjahrs für die Referenz-Verifizierung",
-  "field-description-doi": "Gewichtung für exakte DOI-Übereinstimmungen (höchste Konfidenz wenn verfügbar)",
-  "field-description-arxivId": "Gewichtung für arXiv ID-Übereinstimmungen (wichtig für Preprints)",
-  "field-description-pmid": "Gewichtung für PubMed ID-Übereinstimmungen (wichtig für medizinische Literatur)",
-  "field-description-pmcid": "Gewichtung für PMC ID-Übereinstimmungen (wichtig für medizinische Literatur)",
-  "field-description-isbn": "Gewichtung für ISBN-Übereinstimmungen (wichtig für Bücher)",
-  "field-description-issn": "Gewichtung für ISSN-Übereinstimmungen (wichtig für Zeitschriften)",
-  "field-description-containerTitle": "Gewichtung für Zeitschriften-/Container-Titel-Übereinstimmungen",
-  "field-description-volume": "Gewichtung für Band-Nummer-Übereinstimmungen",
-  "field-description-issue": "Gewichtung für Ausgabe-Nummer-Übereinstimmungen",
-  "field-description-pages": "Gewichtung für Seitenzahl-Übereinstimmungen",
-  "container-title": "Container-Titel",
-  "how-field-weights-work": "Wie Feldgewichtungen funktionieren",
-  "field-weights-explanation": "Feldgewichtungen bestimmen, wie wichtig jedes Metadatenfeld beim Vergleich von Referenzen ist. Höhere Gewichtungen bedeuten, dass das Feld mehr Einfluss auf die Gesamtbewertung hat. Die Summe muss 100% ergeben.",
-  "practical-example": "Praktisches Beispiel",
-  "scenario": "Szenario",
-  "example-scenario": "Sie möchten sich nur auf Titel- und DOI-Abgleich konzentrieren und alle anderen Felder ignorieren",
-  "field": "Feld",
-  "weight": "Gewichtung",
-  "impact": "Auswirkung",
-  "high-impact": "Großer Einfluss auf Bewertung",
-  "medium-impact": "Mittlerer Einfluss auf Bewertung",
-  "low-impact": "Geringer Einfluss auf Bewertung",
-  "no-impact": "Feld wird ignoriert",
-  "other-fields": "Andere Felder",
-  "example-explanation": "In diesem Beispiel konzentriert sich die Verifizierung zu 50% auf Titel-Ähnlichkeit, zu 30% auf DOI-Übereinstimmung und zu 20% auf Autoren-Ähnlichkeit. Alle anderen Felder (Jahr, Zeitschrift, Seiten, etc.) werden ignoriert."
+  "yes": "Ja"
 }
