--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1,6 +1,8 @@
 {
   "about": "About",
   "about-description": "Learn more about the extension",
+  "advanced-fields": "Advanced Fields",
+  "advanced-fields-description": "These fields are optional and can provide additional matching precision for specialized content types. Enable only the fields relevant to your use case.",
   "advisor": "Advisor",
   "ai": "AI",
   "ai-description": "Enable and configure AI-powered functionality",
@@ -14,6 +16,7 @@
   "analyzing-references-description": "We're searching for matching sources and checking them against your references. This may take some time depending on the number of references.",
   "analyzing-text-content": "Analyzing text content…",
   "analyzing-text-content-description": "The entered text is being analyzed. We're automatically detecting bibliographic references. This may take a while depending on the length of the text.",
+  "anthology": "Anthology",
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "api-key-valid": "Valid",
@@ -46,6 +49,7 @@
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
   "contact-email": "For questions or issues, you can reach us via email",
+  "container-title": "Container Title",
   "containerTitle": "Container Title",
   "containerTitle-match": "Container Title Match",
   "contributors": "Contributors",
@@ -55,6 +59,7 @@
   "copy-identifier": "Copy identifier",
   "copy-identifier-tooltip": "Copy the primary identifier (DOI, PMCID, etc.) to clipboard",
   "copy-reference": "Copy reference",
+  "core-fields": "Core Fields",
   "create-one-here": "create one here",
   "dark": "Dark",
   "date-range": "Date Range",
@@ -83,10 +88,39 @@
   "error": "Error",
   "error-reference": "Reference could not be verified due to a technical error",
   "error-references-tooltip": "References that could not be verified due to a technical error",
+  "example-explanation": "In this example, verification will focus 50% on title similarity, 30% on DOI match, and 20% on author similarity. All other fields (year, journal, pages, etc.) are ignored.",
+  "example-scenario": "You want to focus only on title and DOI matching, ignoring all other fields",
+  "expert-settings": "Expert Settings",
+  "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "extracting-references": "Extracting References...",
   "extracting-references-description": "Extracting References from the Text...",
+  "field": "Field",
+  "field-description-articleNumber": "Weight for article number matching (electronic journals)",
+  "field-description-arxivId": "Weight for arXiv ID matches (important for preprints)",
+  "field-description-authors": "How important is author matching for reference verification",
+  "field-description-conference": "Weight for conference name matching",
+  "field-description-containerTitle": "Weight for journal/container title matching",
+  "field-description-doi": "Weight for exact DOI matches (highest confidence when available)",
+  "field-description-edition": "Weight for edition information matching",
+  "field-description-institution": "Weight for institution matching (for theses, reports)",
+  "field-description-isbn": "Weight for ISBN matches (important for books)",
+  "field-description-issn": "Weight for ISSN matches (important for journals)",
+  "field-description-issue": "Weight for issue number matching",
+  "field-description-pages": "Weight for page range matching",
+  "field-description-pmcid": "Weight for PMC ID matches (important for medical literature)",
+  "field-description-pmid": "Weight for PubMed ID matches (important for medical literature)",
+  "field-description-publisher": "Weight for publisher name matching",
+  "field-description-sourceType": "Weight for source type matching (article, book, thesis, etc.)",
+  "field-description-subtitle": "Weight for subtitle matching (important for German citation styles)",
+  "field-description-title": "How important is title matching for reference verification",
+  "field-description-url": "Weight for URL matching",
+  "field-description-volume": "Weight for volume number matching",
+  "field-description-year": "How important is publication year matching for reference verification",
+  "field-weights": "Field Weights",
+  "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
+  "field-weights-explanation": "Field weights determine how important each metadata field is when comparing references. Higher weights mean that field has more influence on the overall match score. The total must equal 100%.",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
   "found": "Found",
@@ -99,9 +133,13 @@
   "hide-additional-fields": "Hide additional fields",
   "hide-date-details": "Hide date details",
   "hide-details": "Hide details",
+  "high-impact": "Major influence on match score",
+  "how-field-weights-work": "How Field Weights Work",
   "hr": "hr",
+  "identifier-fields": "Identifier Fields",
   "idle-state-text": "You have not entered any input yet or have not started the verification. Please enter text or upload a PDF file and click on 'Verify'",
   "idle-state-title": "Input or verification pending",
+  "impact": "Impact",
   "import-pdf-or-add-references": "Upload a PDF file or paste references into the text field to start verification.",
   "in-press": "In Press",
   "in-press-indicator": "in press",
@@ -111,8 +149,8 @@
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
   "invalid-url": "Please enter a valid URL",
-  "isbn": "ISBN",
   "is-standalone": "Standalone Work",
+  "isbn": "ISBN",
   "issn": "ISSN",
   "issue": "Issue",
   "issue-match": "Issue Match",
@@ -124,7 +162,9 @@
   "language-option-description": "Select the language of the extension",
   "learn-more": "Learn more",
   "light": "Light",
+  "loading-settings": "Loading settings...",
   "location": "Location",
+  "low-impact": "Minor influence on match score",
   "match-analysis": "",
   "match-details": "Match Details",
   "match-score": "Match Score",
@@ -133,13 +173,18 @@
   "match-status-no_match": "",
   "match-status-partial": "",
   "medium": "Medium",
+  "medium-impact": "Moderate influence on match score",
   "metadata": "Metadata",
   "min": "min",
   "month": "Month",
+  "more-advanced-fields": "More Specialized Fields",
+  "more-advanced-fields-description": "Additional fields for highly specialized use cases (academic theses, translated works, etc.)",
+  "no": "No",
   "no-additional-error-info": "No additional error information available",
   "no-data-available": "No data available",
   "no-date": "No Date",
   "no-date-indicator": "n.d.",
+  "no-impact": "Field is ignored",
   "no-input-provided": "No Input Provided",
   "no-matching-source-found": " No matching source found or verification failed",
   "no-references-detected": "No references detected",
@@ -159,6 +204,8 @@
   "original-language": "Original Language",
   "original-text": "Original text",
   "original-title": "Original Title",
+  "other": "Other",
+  "other-fields": "Other fields",
   "overall-match": "Overall Match",
   "page-type": "Page Type",
   "pages": "Pages",
@@ -170,8 +217,10 @@
   "pmcid": "PMCID",
   "pmid": "PMID",
   "popup": "Popup",
+  "practical-example": "Practical Example",
   "publication-date": "Publication Date",
   "publication-place": "Publication Place",
+  "publication-year": "Publication Year",
   "published-date": "Published Date",
   "publisher": "Publisher",
   "re-verify": "Re-verify",
@@ -188,10 +237,13 @@
   "requests-per-day-description": "This is the limit of AI requests per day",
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
+  "reset-to-defaults": "Reset to Defaults",
   "resets-in": "Resets in approximately",
   "restart-verification": "Restart verification",
   "retrieval-date": "Retrieval Date",
-  "retry-verification": "Retry verification",
+  "retry": "Retry",
+  "save-settings": "Save Settings",
+  "scenario": "Scenario",
   "search": "Search",
   "search-and-verification": "Search and verification",
   "search-and-verify": "Search and Verify",
@@ -210,6 +262,7 @@
   "site-name": "Site Name",
   "source": "Source",
   "source-code": "Source Code",
+  "source-fields": "Source Fields",
   "source-metadata": "Source Metadata",
   "source-type": "Source Type",
   "source-url": "Source URL",
@@ -225,6 +278,7 @@
   "title-match": "Title Match",
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "total-weight": "Total Weight",
   "unregistered": "Unregistered",
   "unverified": "Unverified",
   "unverified-reference": "Reference could not be matched to a source. Please verify the reference manually",
@@ -259,49 +313,10 @@
   "website": "Website",
   "website-metadata": "Website Metadata",
   "website-url": "Website URL",
+  "weight": "Weight",
+  "weights-should-sum-to-100": "All weights should sum to 100%",
   "year": "Year",
   "year-match": "Year Match",
   "year-suffix": "Year Suffix",
-  "yes": "Yes",
-  "no": "No",
-  "expert-settings": "Expert Settings",
-  "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
-  "field-weights": "Field Weights",
-  "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
-  "total-weight": "Total Weight",
-  "weights-should-sum-to-100": "All weights should sum to 100%",
-  "core-fields": "Core Fields",
-  "identifier-fields": "Identifier Fields",
-  "source-fields": "Source Fields",
-  "save-settings": "Save Settings",
-  "reset-to-defaults": "Reset to Defaults",
-  "loading-settings": "Loading settings...",
-  "field-description-title": "How important is title matching for reference verification",
-  "field-description-authors": "How important is author matching for reference verification",
-  "field-description-year": "How important is publication year matching for reference verification",
-  "field-description-doi": "Weight for exact DOI matches (highest confidence when available)",
-  "field-description-arxivId": "Weight for arXiv ID matches (important for preprints)",
-  "field-description-pmid": "Weight for PubMed ID matches (important for medical literature)",
-  "field-description-pmcid": "Weight for PMC ID matches (important for medical literature)",
-  "field-description-isbn": "Weight for ISBN matches (important for books)",
-  "field-description-issn": "Weight for ISSN matches (important for journals)",
-  "field-description-containerTitle": "Weight for journal/container title matching",
-  "field-description-volume": "Weight for volume number matching",
-  "field-description-issue": "Weight for issue number matching",
-  "field-description-pages": "Weight for page range matching",
-  "container-title": "Container Title",
-  "how-field-weights-work": "How Field Weights Work",
-  "field-weights-explanation": "Field weights determine how important each metadata field is when comparing references. Higher weights mean that field has more influence on the overall match score. The total must equal 100%.",
-  "practical-example": "Practical Example",
-  "scenario": "Scenario",
-  "example-scenario": "You want to focus only on title and DOI matching, ignoring all other fields",
-  "field": "Field",
-  "weight": "Weight",
-  "impact": "Impact",
-  "high-impact": "Major influence on match score",
-  "medium-impact": "Moderate influence on match score",
-  "low-impact": "Minor influence on match score",
-  "no-impact": "Field is ignored",
-  "other-fields": "Other fields",
-  "example-explanation": "In this example, verification will focus 50% on title similarity, 30% on DOI match, and 20% on author similarity. All other fields (year, journal, pages, etc.) are ignored."
+  "yes": "Yes"
 }
